# HyperReducedProjectiveDynamics

./: .gitignore  CMakeLists.txt  _README.txt
cmake/: libigl.cmake
cuda/: CUDAMatrixVectorMult.cpp  doubleToFloatDeviceCpy.cu  doubleToFloatDeviceCpy.cuh
include/: CUDAMatrixVectorMult.h  ProjDynConstraints.h  ProjDynMeshSampler.h  ProjDynRHSInterpol.h  ProjDynSimulator.h  ProjDynTetGen.h  ProjDynTypeDef.h  ProjDynUtil.h  STVD.h  StopWatch.h
src/: CUDAMatrixVectorMult.cpp  HRPD.cpp  ProjDynConstraints.cpp  ProjDynMeshSampler.cpp  ProjDynRHSInterpol.cpp  ProjDynSimulator.cpp  ProjDynTetGen.cpp  ProjDynUtil.cpp  STVD.cpp  StopWatch.cpp  doubleToFloatDeviceCpy.cu
temp/: CUDAMatrixVectorMult.h
